--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,11 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-application.yml
+src/main/resources/application.yml
+.DS_Store
+gradle/.DS_Store
+src/.DS_Store
+src/main/.DS_Store
 
 ### STS ###
 .apt_generated
