--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,11 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' //jpa
+
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+runtimeOnly 'com.h2database:h2:1.4.200'
